--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="page">
     <div class="content">
-        <h1><span>WELCOME</span><span> {{name}}</span></h1>
+        <h1 class="row"><span class="col-*-12 col-lg-6 col-xl-6">WELCOME</span> <span class="col-*-12 col-lg-6 col-xl-6">{{name}}</span></h1>
     </div>
     <div class="qlinks">
         <h2>Quick links</h2>
