--- a/src/app/expcat/expcat.component.css
+++ b/src/app/expcat/expcat.component.css
@@ -132,7 +132,7 @@ small{
     margin-top: 30px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.753);
     border: hidden;
-    border-color:rgb(22, 22, 22);
+    border-color:rgba(22, 22, 22, 0.432);
     font-family: 'Quicksand', sans-serif;
 }
 
