--- a/src/app/my-nav/my-nav.component.html
+++ b/src/app/my-nav/my-nav.component.html
@@ -5,14 +5,15 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>MASTERS</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="/expenses-cat" routerLink="expenses-cat"><span></span>EXPENSES CATEGORY</a>
-      <a mat-list-item href="/income-cat" routerLink="income-cat"><span></span>INCOME CATEGORY</a>
-      <a mat-list-item href="/expenses" routerLink="expenses"><span></span>EXPENSES</a>
-      <a mat-list-item href="/income" routerLink="income"><span></span>INCOME</a>
-      <a mat-list-item href="/cash-book" routerLink="cash-book"><span></span>CASH BOOK</a>
-      <a mat-list-item href="/bank-book" routerLink="bank-book"><span></span>BANK BOOK</a>
-      <a mat-list-item href="/day-book" routerLink="day-book"><span></span>DAY BOOK</a>
-      <a mat-list-item href="/bal-sheet" routerLink="bal-sheet"><span></span>BALANCE SHEET</a>
+      <div class="utitle"><div>Hey, {{u_name}}</div></div>
+      <a mat-list-item (click)="dtoggle()" href="/expenses-cat" routerLink="expenses-cat"><span></span>EXPENSES CATEGORY</a>
+      <a mat-list-item (click)="dtoggle()" href="/income-cat" routerLink="income-cat"><span></span>INCOME CATEGORY</a>
+      <a mat-list-item (click)="dtoggle()" href="/expenses" routerLink="expenses"><span></span>EXPENSES</a>
+      <a mat-list-item (click)="dtoggle()" href="/income" routerLink="income"><span></span>INCOME</a>
+      <a mat-list-item (click)="dtoggle()" href="/cash-book" routerLink="cash-book"><span></span>CASH BOOK</a>
+      <a mat-list-item (click)="dtoggle()" href="/bank-book" routerLink="bank-book"><span></span>BANK BOOK</a>
+      <a mat-list-item (click)="dtoggle()" href="/day-book" routerLink="day-book"><span></span>DAY BOOK</a>
+      <a mat-list-item (click)="dtoggle()" href="/bal-sheet" routerLink="bal-sheet"><span></span>BALANCE SHEET</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
